--- a/bin/readme
+++ b/bin/readme
@@ -1,5 +1,5 @@
 binaries will be placed here.
 
-HXRT218 contains the HX runtime, including the DPMI host, the PE program loader DPMILD32 and the basic Win32 emulation.
+HXRT218 contains the HX runtime, including the DPMI host HDPMI, the PE program loader DPMILD32 and the basic Win32 emulation.
 
 hxtrap is a so-called trap file for the Open Watcom debugger WD.
