--- a/Src/MZSUPP/HISTORY.TXT
+++ b/Src/MZSUPP/HISTORY.TXT
@@ -1,5 +1,5 @@
 
-2020/11/21: added InitMZ.asm: simple initialization of DPMI apps.
+2020/11/21: added InitPM.asm: simple initialization of 32-bit DPMI apps.
 2008/01/31: deleted support for Win32 emulation.
             added support for loading PE images within an MZ binary
             (loadpe.asm)
